--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,4 +30,19 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    //  Okhttp库
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+    //  retrofit库
+    implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+    //  rxJava库
+    implementation 'io.reactivex.rxjava2:rxjava:2.1.1'
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.1'
+    //  glide库
+    implementation'com.github.bumptech.glide:glide:3.8.0'
+    implementation 'com.android.support:support-v4:28.0.0'
+    //  even bus库
+    implementation 'org.greenrobot:eventbus:3.1.1'
+    //  gson库
+    implementation 'com.google.code.gson:gson:2.8.5'
+
 }
