--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,7 @@ dependencies {
     implementation 'org.greenrobot:eventbus:3.1.1'
     //  gson库
     implementation 'com.google.code.gson:gson:2.8.5'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+    implementation 'com.android.support:cardview-v7:28.0.0'
 
 }
